syntax = "proto3";

package greeting;

message GreetingRequest {
	string name = 1;
}

message Greetingresponse {
	string result = 1;
}

service GreetingService {
	rpc greet_with_deadline (GreetingRequest) returns (Greetingresponse) {}
}